Update changelog for Cosmic Company v1.2.1
Added note about compatibility with version 72 and v73.

--- a/_posts/CosmicCompany/changelogs/2025-10-16-v1.2.1.md
+++ b/_posts/CosmicCompany/changelogs/2025-10-16-v1.2.1.md
@@ -8,6 +8,8 @@ pin: true
 ---
 # Cosmic Company v1.2.1
 
+#### Currently only works in v72! Will **not** work in v73 - To get access to v72 change the Lethal Company Beta branch to "previous version" on Steam.
+
 ## Additions
 - ### **Lategame upgrades**
 - #### **Playzone interior**
